Fixed broken chat with CKEditor 5.
- "Uncaught ReferenceError: CKEDITOR is not defined"
- Send button not visible (z-index)
- Set max-height

--- a/application/modules/user/static/css/message.css
+++ b/application/modules/user/static/css/message.css
@@ -4,11 +4,12 @@
 }
 .chat .chat-wrapper {
     display: flex;
-    height: 800px;
+    height: 1000px;
 }
 .chat .chat-wrapper .right-column {
     display: flex;
     flex-direction: column;
+    max-height: 100%;
 }
 .chat .chat-wrapper .chat-list-scroll {
     position: relative;
